--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "coffeescript": "^2.3.2",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "node-sass": "^4.11.0"
   },
